--- a/.github/workflows/buildImage.yml
+++ b/.github/workflows/buildImage.yml
@@ -27,4 +27,4 @@ jobs:
       with:
         context: "{{defaultContext}}"
         push: true
-        tags: ghcr.io/${{ env.GITHUB_REPOSITORY }}:latest
+        tags: ghcr.io/${{ github.repository }}:latest
